JCR DataStore option in the installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@142 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -5,9 +5,8 @@ databaseType=${dbSettings.dbms.type}
 databaseUrl=${dbSettings.connection.url}
 databaseUsername=${dbSettings.connection.username}
 externalizedConfigActivated=${externalizedConfigActivated}
-externalizedConfigTargetPath=${externalizedConfigTargetPath}
 externalizedConfigClassifier=${externalizedConfigClassifier}
-operatingMode=${operatingMode}
+externalizedConfigTargetPath=${externalizedConfigTargetPath}
 jahiaRootEmail=${superUser.email}
 jahiaRootFirstname=${superUser.firstname}
 jahiaRootLastname=${superUser.lastname}
@@ -18,9 +17,11 @@ jahiaToolManagerUsername=${jahiaManager.username}
 mailAdministrator=${mailSettings.administrator}
 mailFrom=${mailSettings.from}
 mailServer=${mailSettings.server}
+operatingMode=${operatingMode}
 overwritedb=${dbSettings.dbms.createTables}
 storeFilesInDB=${dbSettings.dbms.storeFilesInDB}
 targetConfigurationDirectory=${jahia.war.target.path}
 targetServerDirectory=${INSTALL_PATH}/${server.type}
 targetServerType=${server.type}
 targetServerVersion=
+useDataStore=${dbSettings.dbms.useDataStore}
