Bring back the windows-installer profile for the release
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@148 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/pom.xml
+++ b/pom.xml
@@ -524,7 +524,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <goals>deploy</goals>
                     <preparationGoals>clean install</preparationGoals>
-                    <releaseProfiles>installer,qa-build</releaseProfiles>
+                    <releaseProfiles>installer,windows-installer,qa-build</releaseProfiles>
                 </configuration>
             </plugin>
 
