--- a/pom.xml
+++ b/pom.xml
@@ -524,7 +524,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <goals>deploy</goals>
                     <preparationGoals>clean install</preparationGoals>
-                    <releaseProfiles>installer,windows-installer,qa-build</releaseProfiles>
+                    <releaseProfiles>installer,windows-installer</releaseProfiles>
                 </configuration>
             </plugin>
 
