--- a/package/shared-libraries/pom.xml
+++ b/package/shared-libraries/pom.xml
@@ -83,6 +83,13 @@
           <artifactId>portals-bridges-common</artifactId>
           <version>1.0.4</version>
       </dependency>
+      
+      <!-- Jahia Tomcat lifecycle listener -->
+      <dependency>
+          <groupId>org.jahia.configuration</groupId>
+          <artifactId>jahia-server-utils</artifactId>
+          <version>1.0</version>
+      </dependency>
 
   </dependencies>
   <build>
