--- a/war/pom.xml
+++ b/war/pom.xml
@@ -370,6 +370,13 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>myconnections</artifactId>
+            <version>1.2-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>wiki</artifactId>
             <version>1.2-SNAPSHOT</version>
             <type>war</type>
