QA-3408 - Install wizard with production cluster seems to not work with storage on filesystem http://jira.jahia.org/browse/QA-3408
QA-3419 - java.io.FileNotFoundException on a fresh 6.6 startup
http://jira.jahia.org/browse/QA-3419

Completely removed condition for DataStore and set the useDataStore flag to true in any case (fixes side-effect of changs for QA-3304 )

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@233 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -25,4 +25,4 @@ targetConfigurationDirectory=${jahia.war.target.path}
 targetServerDirectory=${INSTALL_PATH}/${server.type}
 targetServerType=${server.type}
 targetServerVersion=
-useDataStore=${dbSettings.dbms.useDataStore}
+useDataStore=true
