--- a/war/pom.xml
+++ b/war/pom.xml
@@ -318,8 +318,22 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>templates-web-space</artifactId>
+            <version>1.2-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acme</artifactId>
+            <version>1.2-SNAPSHOT</version>
+            <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.prepackagedsites</groupId>
+            <artifactId>acme-space</artifactId>
             <version>1.2-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
