--- a/war/pom.xml
+++ b/war/pom.xml
@@ -333,7 +333,7 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
-            <artifactId>acme-space</artifactId>
+            <artifactId>acmespace</artifactId>
             <version>1.2-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
