--- a/pom.xml
+++ b/pom.xml
@@ -440,6 +440,37 @@
                     <artifactId>maven-jahia-plugin</artifactId>
                     <version>${jahia.plugin.version}</version>
                 </plugin>
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.jahia.server
+                                        </groupId>
+                                        <artifactId>
+                                            maven-jahia-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [2.61,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>copy-templates</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
