--- a/war/pom.xml
+++ b/war/pom.xml
@@ -397,6 +397,22 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Docspace modules -->
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>document-viewer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>templates-docspace</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        
     </dependencies>
 
     <build>
