--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
 
         <license.plugin.version>1.8.0</license.plugin.version>
         <javadoc.plugin.version>2.7</javadoc.plugin.version>
-        <war.plugin.version>2.1.1.jahia1</war.plugin.version>
+        <war.plugin.version>2.2</war.plugin.version>
         <enforcer.plugin.version>1.0</enforcer.plugin.version>
         <compiler.plugin.version>2.3.2</compiler.plugin.version>
         <buildnumber.plugin.version>1.0</buildnumber.plugin.version>
