--- a/pom.xml
+++ b/pom.xml
@@ -439,6 +439,10 @@
                     <artifactId>maven-jahia-plugin</artifactId>
                     <version>${jahia.plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.5</version>
+                </plugin>
                 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
