Use version 1.2.1-SNAPSHOT for modules formbuilder, googleAnalytics and rating
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@297 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -126,14 +126,14 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>1.2</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>googleAnalytics</artifactId>
-            <version>1.2</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -189,7 +189,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>1.2</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
