Use versions 1.2.1-SNAPSHOT of template sets (web, web-blue and web-space) for SP1 branch
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@300 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -306,21 +306,21 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-web</artifactId>
-            <version>1.2</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-web-blue</artifactId>
-            <version>1.2</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-web-space</artifactId>
-            <version>1.2</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
