--- a/war/pom.xml
+++ b/war/pom.xml
@@ -407,6 +407,13 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>document-thumbnails</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>video-thumbnails</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
