--- a/war/pom.xml
+++ b/war/pom.xml
@@ -357,7 +357,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>forum</artifactId>
-            <version>1.2</version>
+            <version>1.2.1-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
