--- a/war/pom.xml
+++ b/war/pom.xml
@@ -23,7 +23,7 @@
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  
-    As a special exception to the temodurms and conditions of version 2.0 of
+    As a special exception to the terms and conditions of version 2.0 of
     the GPL (or any later version), you may redistribute this Program in connection
     with Free/Libre and Open Source Software ("FLOSS") applications as described
     in Jahia's FLOSS exception. You should have received a copy of the text
