--- a/war/pom.xml
+++ b/war/pom.xml
@@ -864,7 +864,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Docspace modules -->
+        <!-- Document Management modules -->
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer</artifactId>
@@ -893,14 +893,6 @@
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jahia.modules</groupId>
-            <artifactId>templates-docspace</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>war</type>
-            <scope>runtime</scope>
-        </dependency>
-        
     </dependencies>
 
     <build>
