Package Document Management related modules into a separate WAR
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@332 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,7 @@
 
     <modules>
         <module>war</module>
+        <module>dm-war</module>
         <module>package</module>
     </modules>
 
