--- a/pom.xml
+++ b/pom.xml
@@ -993,6 +993,7 @@
 
     <modules>
         <module>war</module>
+        <module>dm-war</module>
         <module>package</module>
     </modules>
 
