BACKLOG-2823 - Backport changes from EE installer to the CE installer https://jira.jahia.org/browse/BACKLOG-2823
Introduce Jahia Vibes installer for Community Edition

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@336 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -26,3 +26,4 @@ targetServerDirectory=${INSTALL_PATH}/${server.type}
 targetServerType=${server.type}
 targetServerVersion=
 useDataStore=true
+jahiaProperties="documentConverter.enabled":"${dmConfig.officePath.provided}","documentConverter.officeHome":"${dmConfig.officePath}","jahia.dm.viewer.enabled":"${dmConfig.pdf2swfPath.provided}","jahia.dm.viewer.pdf2swf":"${dmConfig.pdf2swfPath}","jahia.dm.thumbnails.video.enabled":"${dmConfig.ffmpegPath.provided}","jahia.dm.thumbnails.video.ffmpeg":"${dmConfig.ffmpegPath}","imageService":"${dmConfig.imageService}","imageMagickPath":"${dmConfig.imagemagickPath}"
