--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -51,9 +51,12 @@
 
     <properties>
         <product.name>Jahia xCM</product.name>
+        <product.version>${project.version}</product.version>
+        <product.fullname>Jahia_xCM_v${product.version}</product.fullname>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
-        <jahia.installers.version>2.8</jahia.installers.version>
-        <izpack.version>4.3.5-jahia-beta1</izpack.version>
+        <jahia.installers.version>2.9-SNAPSHOT</jahia.installers.version>
+        <izpack.version>4.3.5-jahia-beta3</izpack.version>
+        <docspace.version>1.0-SNAPSHOT</docspace.version>
     </properties>
 
     <dependencies>
@@ -161,11 +164,11 @@
                             </splash>
                             <versionInfo>
                                 <fileVersion>1.0.0.0</fileVersion>
-                                <txtFileVersion>${project.version}</txtFileVersion>
+                                <txtFileVersion>${product.version}</txtFileVersion>
                                 <fileDescription>${product.name} Windows Installer</fileDescription>
                                 <copyright>${jahia.manifest.vendor.name} (${jahia.manifest.vendor.url})</copyright>
                                 <productVersion>1.0.0.0</productVersion>
-                                <txtProductVersion>${project.version}</txtProductVersion>
+                                <txtProductVersion>${product.version}</txtProductVersion>
                                 <productName>${product.name}</productName>
                                 <companyName>${jahia.manifest.vendor.name}</companyName>
                                 <internalName>${installer.filename}.jar</internalName>
@@ -189,6 +192,104 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>docspace</id>
+            <properties>
+                <product.name>Jahia Vibes</product.name>
+                <product.version>${docspace.version}</product.version>
+                <product.fullname>Jahia_Vibes_v${product.version}</product.fullname>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.4</version>
+                        <executions>
+                            <execution>
+                                <id>copy-docspace</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.jahia.modules</groupId>
+                                            <artifactId>templates-docspace</artifactId>
+                                            <version>${docspace.version}</version>
+                                            <type>war</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>unpack-docspace</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.jahia.modules</groupId>
+                                            <artifactId>templates-docspace</artifactId>
+                                            <version>${docspace.version}</version>
+                                            <type>war</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}/artifacts/docspace</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>${antrun.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>store-build-number</id>
+                                <phase>process-classes</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <loadfile property="buildNumber-ce" srcFile="${project.build.directory}/marker/META-INF/jahia-impl-marker.txt" />
+                                        <echo message="installer.filename=Jahia_Vibes_v${docspace.version}_r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-resources</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/izpack</outputDirectory>
+                                    <overwrite>true</overwrite>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/main/resources/izpack/docspace</directory>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <build>
@@ -196,6 +297,16 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>izpack/i18n/customLang_*.properties</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>izpack/i18n/customLang_*.properties</include>
+                </includes>
+                <filtering>true</filtering>
             </resource>
         </resources>
         <plugins>
@@ -203,10 +314,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.4</version>
                 <executions>
                     <execution>
-                        <id>unpack-thing</id>
+                        <id>unpack-artifacts</id>
                         <phase>process-resources</phase>
                         <goals>
                             <goal>unpack</goal>
@@ -223,17 +334,6 @@
                                     </outputDirectory>
                                     <includes>**/jahia-impl-marker.txt</includes>
                                 </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>unpack-artifacts</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
                                 <artifactItem>
                                     <groupId>org.apache.tomcat</groupId>
                                     <artifactId>apache-tomcat</artifactId>
@@ -259,6 +359,14 @@
                                     <version>${project.version}</version>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/artifacts/jahia-war</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.jahia.server</groupId>
+                                    <artifactId>jahia-dm-pack-war</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>war</type>
+                                    <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/artifacts/jahia-war</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
@@ -329,7 +437,7 @@
                         <configuration>
                             <tasks>
                                 <loadfile property="buildNumber-ce" srcFile="${project.build.directory}/marker/META-INF/jahia-impl-marker.txt" />
-                                <echo message="installer.filename=Jahia_xCM_v${project.version}_r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
+                                <echo message="installer.filename=${product.fullname}_r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
                             </tasks>
                         </configuration>
                     </execution>
@@ -427,6 +535,9 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <encoding>ISO-8859-1</encoding>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>process-resources</phase>
