BACKLOG-2849 - Add the docspace management module into the Ent_Vibe Build https://jira.jahia.org/browse/BACKLOG-2849
Added Docspace Instance Management to the Community and Enterprise Vibes installers

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@346 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -222,6 +222,14 @@
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
                                         </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.jahia.modules</groupId>
+                                            <artifactId>docspace-management</artifactId>
+                                            <version>${docspace.version}</version>
+                                            <type>war</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
+                                        </artifactItem>
                                     </artifactItems>
                                 </configuration>
                             </execution>
