use docspace management templates set / site
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@366 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -224,7 +224,7 @@
                                         </artifactItem>
                                         <artifactItem>
                                             <groupId>org.jahia.modules</groupId>
-                                            <artifactId>docspace-management</artifactId>
+                                            <artifactId>templates-docspace-management</artifactId>
                                             <version>${docspace.version}</version>
                                             <type>war</type>
                                             <overWrite>false</overWrite>
