Deploy JAR files from templates-docspace-management
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@368 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -249,6 +249,14 @@
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}/artifacts/docspace</outputDirectory>
                                         </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.jahia.modules</groupId>
+                                            <artifactId>templates-docspace-management</artifactId>
+                                            <version>${docspace.version}</version>
+                                            <type>war</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}/artifacts/docspace-management</outputDirectory>
+                                        </artifactItem>
                                     </artifactItems>
                                 </configuration>
                             </execution>
