BACKLOG-2866 - Remove all template-sets from installer apart docspace one https://jira.jahia.org/browse/BACKLOG-2866
For Jahia Wise installer include only core and DM-related modules + docspace related templates

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@374 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -391,7 +391,7 @@
                                     <version>${project.version}</version>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${project.build.directory}/artifacts/jahia-war</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/artifacts/jahia-pack-war</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jahia.server</groupId>
