BACKLOG-2866 - Remove all template-sets from installer apart docspace one https://jira.jahia.org/browse/BACKLOG-2866
Community Installer: created dedicated project for docspace package, which includes docspace templates, docspace management templates, calendar, poll and social modules (merged from jahia_pack/branches/JAHIA-6-6-X-X-BRANCH revision 378)

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@379 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/pom.xml
+++ b/pom.xml
@@ -980,20 +980,17 @@
                 </plugins>
             </build>
         </profile>
-
-        <!--
         <profile>
-            <id>module-forge</id>
+            <id>docspace</id>
             <modules>
-                <module>module-forge</module>
+            <module>docspace-package</module>
             </modules>
         </profile>
-        -->
     </profiles>
 
     <modules>
         <module>war</module>
-        <module>dm-war</module>
+        <module>dm-package</module>
         <module>package</module>
     </modules>
 
