Use property for docspace.version
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-6-6-X-X-BRANCH@384 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -217,7 +217,7 @@
                                         <artifactItem>
                                             <groupId>org.jahia.server</groupId>
                                             <artifactId>jahia-docspace-package</artifactId>
-                                            <version>1.0-SNAPSHOT</version>
+                                            <version>${docspace.version}</version>
                                             <type>war</type>
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}/artifacts/docspace</outputDirectory>
